--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/ppic.jpg" alt="Manya Chandna profile picture" />
+        <img src="ppic.jpg" alt="Manya Chandna profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -50,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Resume Manya.pdf')"
+            onclick="window.open('Resume Manya.pdf')"
           >
             Download CV
           </button>
